# koofr-vault-appimage

./: AppImageBuilder.yml  README.md
.github/workflows/: build-appimage.yml
tauri-app/: package.json
tauri-app/src-tauri/: Cargo.toml  build.rs
tauri-app/src-tauri/src/: main.rs
