[package]
name = "koofr-vault-desktop"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "1.8.0", features = ["shell-open", "custom-protocol"] }

[build-dependencies]
tauri-build = "1.5.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
